@@ -45,7 +45,7 @@ public class CheckReqParm extends StdWebMacro
 	public String runMacro(final HTTPRequest httpReq, final String parm, final HTTPResponse httpResp)
 	{
 		final java.util.Map<String,String> parms=parseParms(parm);
-		boolean finalCondition=false;
+		Boolean finalCondition=null;
 		for(String key : parms.keySet())
 		{
 			if(key.length()==0)
@@ -53,11 +53,15 @@ public class CheckReqParm extends StdWebMacro
 			final String equals=parms.get(key);
 			boolean not=false;
 			boolean thisCondition=true;
+			boolean orCondition=false;
 			boolean startswith=false;
 			boolean inside=false;
 			boolean endswith=false;
 			if(key.startsWith("||"))
+			{
+				orCondition=true;
 				key=key.substring(2);
+			}
 			if(key.startsWith("|/")&&(key.indexOf("/|")>0))
 				key=key.substring(key.indexOf("/|")+2);
 			if(key.startsWith("<"))
@@ -91,10 +95,24 @@ public class CheckReqParm extends StdWebMacro
 					thisCondition=true;
 				else
 				if(startswith)
-					thisCondition=!check.startsWith(equals);
+				{
+					final boolean cc = CMath.isNumber(check);
+					final boolean ec = CMath.isNumber(equals);
+					if((cc && ec) || (cc && (equals.length()==0)) || (ec && (check.length()==0)))
+						thisCondition = CMath.s_double(check) >= CMath.s_double(equals);
+					else
+						thisCondition=!check.startsWith(equals);
+				}
 				else
 				if(endswith)
-					thisCondition=!check.endsWith(equals);
+				{
+					final boolean cc = CMath.isNumber(check);
+					final boolean ec = CMath.isNumber(equals);
+					if((cc && ec) || (cc && (equals.length()==0)) || (ec && (check.length()==0)))
+						thisCondition = CMath.s_double(check) <= CMath.s_double(equals);
+					else
+						thisCondition=!check.endsWith(equals);
+				}
 				else
 				if(inside)
 					thisCondition=!(check.indexOf(equals)>=0);
@@ -113,10 +131,24 @@ public class CheckReqParm extends StdWebMacro
 					thisCondition=false;
 				else
 				if(startswith)
-					thisCondition=check.startsWith(equals);
+				{
+					final boolean cc = CMath.isNumber(check);
+					final boolean ec = CMath.isNumber(equals);
+					if((cc && ec) || (cc && (equals.length()==0)) || (ec && (check.length()==0)))
+						thisCondition = CMath.s_double(check) < CMath.s_double(equals);
+					else
+						thisCondition=check.startsWith(equals);
+				}
 				else
 				if(endswith)
-					thisCondition=check.endsWith(equals);
+				{
+					final boolean cc = CMath.isNumber(check);
+					final boolean ec = CMath.isNumber(equals);
+					if((cc && ec) || (cc && (equals.length()==0)) || (ec && (check.length()==0)))
+						thisCondition = CMath.s_double(check) > CMath.s_double(equals);
+					else
+						thisCondition=check.endsWith(equals);
+				}
 				else
 				if(inside)
 					thisCondition=(check.indexOf(equals)>=0);
@@ -126,9 +158,16 @@ public class CheckReqParm extends StdWebMacro
 				else
 					thisCondition=true;
 			}
-			finalCondition=finalCondition||thisCondition;
+			if(finalCondition==null)
+				finalCondition=Boolean.valueOf(thisCondition);
+			else
+			if(orCondition)
+				finalCondition=Boolean.valueOf(finalCondition.booleanValue()||thisCondition);
+			else
+				finalCondition=Boolean.valueOf(finalCondition.booleanValue()&&thisCondition);
 		}
-		if(finalCondition)
+		if((finalCondition==null)
+		||(finalCondition.booleanValue()))
 			return "true";
 		return "false";
 	}
