@@ -2059,7 +2059,7 @@ Valid embedded codes for custom prompts include:\n\r\
 %y :  Common skill % prog %Y :  Comm.skill time/rem %u :  Skills on cooldown\n\r\
 %Kh:  Tanks current hits  %Km:  Tanks current mana  %Kv:  Tanks curr. moves \n\r\
 %KH:  Tanks maximum hits  %KM:  Tanks maximum mana  %KV:  Tanks maxi. moves \n\r\
-%Ke:  Tanks name          %KE:  Tanks health\n\r\
+%Ke:  Tanks name          %KE:  Tanks health        %j :  Group size/%J: max\n\r\
 ^HMISC:^N\n\r\
 %/ :  Begin/End combat-only section -- %\\ :  Begin/End non-combat sect.\n\r\
 %fFACTION NAME : Faction value as pct. %FfACTION NAME : Faction value as text\n\r\
