@@ -33,8 +33,10 @@
  32. Pregnant people now get food addictions, and Addictions can now include resource name
  33. Amputation now works on corpses.
  34. Prop_*Adjusters now support ambiance+- arguments.
- 25. New property: Prop_PropSetter, for potentially permanent object changes.
- 26. Rituals now support TIMEOUT, INCLUDE and ASSIST tasks for cooperative magic!
+ 35. New property: Prop_PropSetter, for potentially permanent object changes.
+ 36. Rituals now support TIMEOUT, INCLUDE and ASSIST tasks for cooperative magic!
+ 37. PROMPT now supports group size / max group members
+ 38. MG Journal browser now supports Journal Limit / pages. 
 
 # Build 5.10.2 Release 4/28/2023
   *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
